# virtuaplant

./: pyproject.toml
plants/bottle-filling/: hmi.py  modbus.py  start.sh  world.py
