[tool.poetry]
name = "virtuaplant"
version = "0.1.0"
description = ""
authors = ["Maxime Puys <drakes00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymodbus = "^3.8.3"
pyserial = "^3.5"
pygame = "^2.6.1"
pymunk = "^6.11.0"
twisted = "^24.11.0"
pygobject = "^3.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
